--- a/pubsub_firestore_binary_processor/src/main/resources/application.properties
+++ b/pubsub_firestore_binary_processor/src/main/resources/application.properties
@@ -21,6 +21,10 @@ pubsub.data.binary.subscription=data-input-binary-sub
 pubsub.data.json.topic=data-output-json-topic
 pubsub.message.controller.topic=data-input-binary-topic
 
+# Redis Configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+
 # DFDL name to be use to test the application.
 # The code can be refactored to dynamically grabbed the name from the binary
 # message, body of the payload or any other kind of source.
