Added Redis caching and minor changes to README

--- a/pubsub_bigtable_binary_processor_with_debugger/src/main/resources/application.properties
+++ b/pubsub_bigtable_binary_processor_with_debugger/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Google Cloud Project Configuratio
+# Google Cloud Project Configuration
 spring.cloud.gcp.project-id=my-dfdl-project
 server.port=8081
 
