--- a/pubsub_bigtable_binary_processor_with_debugger/pom.xml
+++ b/pubsub_bigtable_binary_processor_with_debugger/pom.xml
@@ -84,6 +84,10 @@ limitations under the License. -->
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot</artifactId>
       <version>2.5.6</version>
     </dependency>
